# learning-agent-adk

./: .dockerignore  Dockerfile  main.py  pyproject.toml
checkpoints_generator_agent/: agent.py  prompt.py  schemas.py
core/: settings.py
generate_query_for_web_search_agent/: agent.py  prompt.py  schemas.py
root_learning_agent/: agent.py  utils.py
root_learning_agent/services/: chunk_context.py  context_stope.py  search_web.py
root_learning_agent/sub_agents/: checkpoint_generator_agent.py  generate_query_agent.py  question_generator_agent.py  teach_concept_agent.py  validatete_answer_agent.py
scripts/: start_adk_server.sh
